I changed the submit button text

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div class="w-full relative">
                         <button
                             class="sticky inset-0 z-10 w-full bg-linear-to-r from-indigo-500 via-indigo-300 to-indigo-500 py-4 rounded-2xl cursor-pointer">
-                            Drop a line
+                            Start Your Project
                         </button>
 
                         <div class="absolute top-5 w-full h-10 bg-indigo-800 blur-[50px]"></div>
@@ -296,7 +296,7 @@
                         <i class="fa-brands fa-linkedin-in text-white/50 hover:text-white duration-500"></i>
                     </a>
                     <a href="#">
-                        <i class="fa-brands fa-github text-white/50 hover:text-white duration-500"></i>
+                        <i class="fa-brands fa-youtube text-white/50 hover:text-white duration-500"></i>
                     </a>
                     <a href="#">
                         <i class="fa-brands fa-x-twitter text-white/50 hover:text-white duration-500"></i>
